--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-07-30 15:37:26
+lastsearch = 2024-07-30 17:29:05
 
 [demxanh.com]
-match = 27.6%%
-title = Bộ chăn ga gối Hanvico LIVING - LV56
-url = https://demxanh.com/bo-chan-ga-goi-hanvico-living-lv56.html
+match = 28.0%%
+title = Chăn ga gối Singapore lụa
+url = https://demxanh.com/chan-ga-goi-singapore-lua.html
 
 [www.khodemthanhdo.com]
 match = 52.4%%
@@ -27,9 +27,9 @@ title = Bộ Chăn Ga Gối Lụa Tencel (Pyeoda Sky Silk) - Nệm Cao Su
 url = https://changagoinemgiasi.com/san-pham/bo-chan-ga-goi-lua-tencel-pyeoda-sky-silk/
 
 [shopee.vn]
-match = 65.5%%
-title = GA LỤA CAO CẤP PYEODA SKY SILK
-url = https://shopee.vn/GA-LỤA-CAO-CẤP-PYEODA-SKY-SILK-i.10780049.10305032268
+match = -27.6%%
+title = Bộ chăn ga vỏ gối lụa 5 món Skysilk hàng Pyeoda cao cấp ...
+url = https://shopee.vn/Bộ-chăn-ga-vỏ-gối-lụa-5-món-Skysilk-hàng-Pyeoda-cao-cấp-có-túi-đựng-i.60303676.20559202272
 
 [thegioidemonline.com]
 match = 34.5%%
