--- a/images/chan-3-kg/config.ini
+++ b/images/chan-3-kg/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-kg.html
 lastopen = 2024-06-09 21:50:05
 
 [search]
-lastsearch = 2024-07-30 11:20:04
+lastsearch = 2024-07-30 17:28:24
 
 [silverwow.net]
 match = -255.6%%
@@ -219,7 +219,7 @@ url = https://www.itshot.com/jewelry/education-guides/strongest-chains
 [mightydepot.com]
 match = -377.8%%
 title = Chung John Wong Sun Chan pepper 3kg Korean food ...
-url = https://mightydepot.com/products/chung-john-wong-sun-chan-pepper-3kg-korean-food-korea-seasoning-ryokiyoshi-sei-en_b004jhiys0_?srsltid=AfmBOooqWj-QlezhC0VYTK7oqcO1UeX-zQaVsNfqSnQZB6h2J7DBU90J
+url = https://mightydepot.com/products/chung-john-wong-sun-chan-pepper-3kg-korean-food-korea-seasoning-ryokiyoshi-sei-en_b004jhiys0_
 
 [s.click.aliexpress.com]
 match = -444.4%%
