--- a/images/chieu-cay-cao-bang-a-18/config.ini
+++ b/images/chieu-cay-cao-bang-a-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-18.html
 lastopen = 2024-06-09 23:45:38
 
 [search]
-lastsearch = 2024-07-30 16:37:21
+lastsearch = 2024-07-30 17:14:31
 
 [chieutruc.info]
 match = -73.9%%
@@ -14,12 +14,12 @@ url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu cây Cao Bằng A 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-180x200.html?srsltid=AfmBOopXJ3SWn6ngK1YvpJ67HrbDb7i3LodFOoUc-oZV6F4rBOXCdPoN
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-180x200.html
 
 [demxanh.com]
 match = -39.1%%
 title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html?srsltid=AfmBOopOWU2Wd2tSOlbUb3iS_jRbThYUPngFb4DVgUe3SPV_zlJigsPh
+url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html
 
 [shopee.vn]
 match = -78.3%%
@@ -57,9 +57,9 @@ title = Chiếu Trúc Cao Bằng
 url = https://chieu.com.vn/chieu-truc/chieu-truc-cao-bang
 
 [www.youtube.com]
-match = -100.0%%
-title = Đồng Nai: Xe bán tải bị tàu hỏa húc văng, khiến 5 người ...
-url = https://www.youtube.com/watch?v=-ct3l7liT7U
+match = -47.8%%
+title = Chiếu Trúc Cao Bằng Hàng Xuất Khẩu Dùng Liệu Có tốt?
+url = https://www.youtube.com/watch?v=sGb4V5EQcww
 
 [tiki.vn]
 match = -87.0%%
