--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-30 16:17:57
+lastsearch = 2024-07-30 17:20:27
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -27,9 +27,9 @@ title = Chiếu Lác: Nơi bán giá rẻ, uy tín, chất lượng nhất
 url = https://websosanh.vn/s/chiếu+lác.htm
 
 [www.youtube.com]
-match = -237.5%%
-title = MBE vs CES (BO3) | GAM vs TF (BO3) | TW vs TS (BO3) | VCS ...
-url = https://www.youtube.com/watch?v=tXqDhoLY2SI
+match = -200.0%%
+title = Vietnamese Baguette Recipe - BÁNH MÌ VIỆT NAM - KNEAD ...
+url = https://www.youtube.com/watch?v=yzQ6rCK8pJw
 
 [tuyensinh247.com]
 match = -218.8%%
@@ -227,9 +227,9 @@ title = chelsea vs🍯 【WW88.game】Casino Online Châu Á
 url = https://hoanghaco.com.vn/ios/farmer_pyramid_summer/
 
 [www.facebook.com]
-match = -200.0%%
-title = Review phim chiếu rạp | K xem các phần trước có giểu dc ...
-url = https://www.facebook.com/groups/khenphim/posts/k-xem-các-phần-trước-có-giểu-dc-nội-dung-phim-này-k-mng-mình-xin-rv-phim-có-hay-/1779205792553570/
+match = -125.0%%
+title = LỄ BỐC THĂM CHIA CẶP... - Cao Thủ Liên Quân
+url = https://www.facebook.com/story.php/?story_fbid=1021633259632655&id=100053579700031
 
 [baocaobang.vn]
 match = -218.8%%
