--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-30 14:53:47
+lastsearch = 2024-07-30 17:24:51
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -27,9 +27,9 @@ title = Chieu truc thai lan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chieu truc thai lan
 
 [chieutrelanlan.com]
-match = -114.3%%
-title = Chiếu trúc thương hiệu Việt Nam, chất lượng tốt - Bảo hành ...
-url = https://chieutrelanlan.com/
+match = -19.0%%
+title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
+url = https://chieutrelanlan.com/chieu-truc-p17.html
 
 [www.youtube.com]
 match = -147.6%%
@@ -63,8 +63,8 @@ url = https://saigonnhonews.com/thoi-su/hoa-ky/chuan-bi-doi-pho-voi-thien-tai/
 
 [baochinhphu.vn]
 match = -114.3%%
-title = 60%% người hưởng đã nhận lương hưu và trợ cấp BHXH ...
-url = https://baochinhphu.vn/60-nguoi-huong-da-nhan-luong-huu-va-tro-cap-bhxh-muc-moi-102240701181045937.htm
+title = Trước thềm giao dịch UPCoM, BCG Energy công bố kết ...
+url = https://baochinhphu.vn/truoc-them-giao-dich-upcom-bcg-energy-cong-bo-ket-qua-kinh-doanh-voi-loat-chi-so-tang-truong-an-tuong-102240730111107793.htm
 
 [www.vietnam.vn]
 match = 0.0%%
