--- a/images/ruot-goi-ke-re/config.ini
+++ b/images/ruot-goi-ke-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-re.html
 lastopen = 2024-06-10 01:04:04
 
 [search]
-lastsearch = 2024-07-30 13:37:47
+lastsearch = 2024-07-30 17:28:03
 
 [www.thanhthuyhanh.com]
 match = -50.0%%
@@ -14,7 +14,7 @@ url = https://www.thanhthuyhanh.com/products/ruot-goi-nam-dream-zone
 [ninhouse.vn]
 match = -171.4%%
 title = Ruột gối nằm giá rẻ NIN House chính hãng tại Tphcm
-url = https://ninhouse.vn/collections/ruot-goi-1
+url = https://ninhouse.vn/collections/ruot-goi-1?srsltid=AfmBOopvqRbqW8hxGVyow9SWhv7bWB-Xe4--V2QUSTcK7q5qW5TpkNvE
 
 [elambo.vn]
 match = -142.9%%
@@ -34,7 +34,7 @@ url = https://changagoidemsonghong.online/ruot-goi-song-hong.html
 [demxanh.com]
 match = -150.0%%
 title = Ruột gối chính hãng giá khuyến mãi rẻ nhất Hà Nội
-url = https://demxanh.com/ruot-goi.html
+url = https://demxanh.com/ruot-goi.html?srsltid=AfmBOorRo5V04zo9-RlJ10fi0j1PYFEwvMhsm05fmaP494v3jUgB9CFV
 
 [www.diepxuan.com]
 match = -100.0%%
@@ -59,7 +59,7 @@ url = https://songhonghanoi.vn/bang-gia-vo-goi-ruot-goi-song-hong-moi-nhat-2021.
 [jysk.vn]
 match = -164.3%%
 title = Ruột Chăn, Ruột Gối Ngủ Cao Cấp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/ruot-chan-goi
+url = https://jysk.vn/ruot-chan-goi?srsltid=AfmBOoqjq4p4N5NJc3WmairR4XFm1J06c9CmWm4dglDcX-ryMzyK7hS9
 
 [everonvn.com.vn]
 match = -164.3%%
