--- a/images/tham-xop-18/config.ini
+++ b/images/tham-xop-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-xop-18.html
 lastopen = 2024-06-07 00:22:33
 
 [search]
-lastsearch = 2024-07-30 16:51:59
+lastsearch = 2024-07-30 17:22:06
 
 [www.sendo.vn]
 match = 0.0%%
@@ -27,14 +27,14 @@ title = Thảm xốp lót sàn cho bé mang lại không gian vui chơi an toàn
 url = https://thamtretho.com/
 
 [trieuchau.com]
-match = -109.1%%
-title = Thảm Trải Sàn TPHCM - Thảm Xốp
-url = http://trieuchau.com/vi-vn/1058/2478/Tham-xop
+match = -200.0%%
+title = 30*30*18 tấm - Thảm xốp mặt nỉ ghép Âu Lạc
+url = https://trieuchau.com/vi-vn/1057/28077/Tham-Xop-30x30cm/303018-tam--Tham-xop-mat-ni-ghep-Au-Lac
 
 [www.lazada.vn]
 match = -136.4%%
 title = BỘ 18 MIẾNG THẢM XỐP VÂN GỖ CAO CẤP
-url = https://www.lazada.vn/products/bo-18-mieng-tham-xop-van-go-cao-cap-18-mieng-tham-nhieu-mau-i377144802.html?srsltid=AfmBOoqWhzIHcqqv5Bx8EvejqUN7mLBIR38gzan23ndV3cZRlc2bFYcn
+url = https://www.lazada.vn/products/bo-18-mieng-tham-xop-van-go-cao-cap-18-mieng-tham-nhieu-mau-i377144802.html
 
 [tayphuthuan.com]
 match = -154.5%%
@@ -62,9 +62,9 @@ title = Untitled Spreadsheet
 url = https://zookeys.pensoft.net/article/57411/download/excel/21/
 
 [thamxoplotsan.com]
-match = -309.1%%
-title = Thảm Xốp Trải Sàn - Trang 18 trên 118 - Thảm Xốp Lót Sàn
-url = https://thamxoplotsan.com/shop/page/18/
+match = -127.3%%
+title = Thảm Xốp Trải Sàn Cho Công Nhân 18mm
+url = https://thamxoplotsan.com/tham-xop-trai-san-cho-cong-nhan-18mm/
 
 [thamtapvo.com]
 match = -118.2%%
