--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-07-30 09:47:06
+lastsearch = 2024-07-30 18:54:37
 
 [changagoidemsonghong.com]
 match = 18.5%%
@@ -62,9 +62,9 @@ title = Bộ Chăn Ga Gối Sông Hồng Tencel S16 01 Ga Chun
 url = https://songhonghanoi.vn/bo-chan-ga-goi-song-hong-tencel-s1601-ga-chun.html
 
 [alnena.vn]
-match = 14.8%%
-title = Bộ Chăn Ga Gối Mỏng 100%% COTTON ALNENA Mã A1441
-url = https://alnena.vn/products/bo-chan-ga-goi-mong-100-cotton-alnena-ma-a1441
+match = -3.7%%
+title = Bộ Chăn Ga Gối Chun Trần Alnena 100%% Cotton Mã A21242
+url = https://alnena.vn/products/bo-chan-ga-goi-chun-tran-alnena-100-cotton-ma
 
 [bedding.vn]
 match = 11.1%%
@@ -152,9 +152,9 @@ title = Chăn ga gối Sông Hồng Urban mã mầu UC16 - Đệm Thiên Kim
 url = https://demthienkim.com/chan-ga-goi-song-hong-uc16/
 
 [elmichsleep.vn]
-match = -29.6%%
-title = Chăn Ga Gối - Cao Cấp - Đạt chuẩn chất lượng Châu Âu
-url = https://elmichsleep.vn/chan-ga-goi
+match = -18.5%%
+title = Bộ chăn ga 100%% Cotton Ranforce - Elmich Dr.Sleep
+url = https://elmichsleep.vn/bo-chan-ga-100-cotton-ranforce
 
 [khodemgiagoc.com]
 match = -37.0%%
