--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-30 13:46:07
+lastsearch = 2024-07-30 18:55:20
 
 [www.facebook.com]
 match = -141.2%%
@@ -142,9 +142,9 @@ title = Pardis Sabeti
 url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
-match = -164.7%%
-title = PharmGKB summary: sertraline pathway, pharmacokinetics
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7008964/
+match = -200.0%%
+title = Seeing the unseen of Chinese herbal medicine processing ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5773022/
 
 [books.google.com]
 match = -7.7%%
