--- a/images/chieu-dieu-hoa-khong-goi-re-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-18.html
 lastopen = 2024-06-09 22:26:11
 
 [search]
-lastsearch = 2024-07-30 17:37:40
+lastsearch = 2024-07-30 18:47:47
 
 [demxanh.com]
 match = -3.3%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOooSbMS6ST6tnJ5w_KnKFa32ux_KsB6WK8ombu5g-6JqFbkFk-vq
 
 [shopee.vn]
 match = -6.7%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/blog/chieu-dieu-co-mat-khong/
 [demviethome.vn]
 match = 26.7%%
 title = Chiếu điều hòa Latex C18 giá rẻ hà nội. ...
-url = https://demviethome.vn/chieu-dieu-hoa-latex-c18/
+url = https://demviethome.vn/chieu-dieu-hoa-latex-c18/?srsltid=AfmBOorpWzfjG1bTjq_nzNl7awobGGVOw_dbaRCsvmYQdJsWYiQU-9S0
 
 [tiki.vn]
 match = 40.0%%
