--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-30 16:18:37
+lastsearch = 2024-07-30 18:53:54
 
 [tiki.vn]
 match = -47.6%%
@@ -212,9 +212,9 @@ title = Phim Đài Loan
 url = https://motchilltv.to/quoc-gia/dai-loan
 
 [www.bbc.com]
-match = -123.8%%
-title = Chú rể 40 tuổi đẹp trai chi 700.000 tệ cưới cô dâu Việt 18 ...
-url = https://www.bbc.com/vietnamese/articles/cyx0jw1ypq9o
+match = -119.0%%
+title = Nguyễn Phú Trọng, hình ảnh bi tráng của 'người cộng sản ...
+url = https://www.bbc.com/vietnamese/articles/c16j4z56zdpo
 
 [cau-ca.com]
 match = -42.9%%
