--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-30 12:15:16
+lastsearch = 2024-07-30 18:56:23
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -18,8 +18,8 @@ url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [www.facebook.com]
 match = -187.5%%
-title = 08-11-2022 Thời sự chiều 18h30 | By Truyền Hình Sóc Trăng
-url = https://www.facebook.com/soctrangtv/videos/08-11-2022-thời-sự-chiều-18h30/1168759537402748/
+title = 21-08-2023 Thời sự chiều 18h30 | By Truyền Hình Sóc Trăng
+url = https://www.facebook.com/soctrangtv/videos/21-08-2023-thời-sự-chiều-18h30/1110320116612660/
 
 [thuvienphapluat.vn]
 match = -206.2%%
@@ -542,9 +542,9 @@ title = Việt Nam là quốc gia năng động nhất, tăng trưởng nhanh nh
 url = https://xaydungchinhsach.chinhphu.vn/thu-tuong-gui-thong-diep-quan-trong-trong-phat-bieu-chinh-sach-tai-dai-hoc-danh-gia-nhat-xu-so-kim-chi-119240703153709673.htm
 
 [www.momo.vn]
-match = -37.5%%
-title = Lịch chiếu phim Lotte West Lake
-url = https://www.momo.vn/cinema/rap/lotte-cinema/lotte-west-lake-363
+match = -87.5%%
+title = Ý nghĩa số Chủ đạo 8 trong Thần số học
+url = https://www.momo.vn/blog/than-so-hoc-so-8-c117dt187
 
 [vietyen.bacgiang.gov.vn]
 match = -125.0%%
