--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-thang-loi-180x200.html
 lastopen = 2024-06-06 16:41:04
 
 [search]
-lastsearch = 2024-07-30 18:38:15
+lastsearch = 2024-07-30 18:45:01
 
 [maythangloi.com.vn]
 match = -77.8%%
@@ -22,8 +22,8 @@ title = chăn ga thắng lợi giá tốt Tháng 7, 2024 Chăn, Ga, Gối & ...
 url = https://shopee.vn/search?category=11036670&keyword=chăn ga thắng lợi&page=0&subcategory=11036683
 
 [congtynemthangloi.com]
-match = -52.0%%
-title = Review TOP ga giường Thắng Lợi được yêu thích nhất ...
+match = -72.0%%
+title = Review TOP ga giường Thắng Lợi được yêu thích nhất hiện nay
 url = https://congtynemthangloi.com/review-ga-giuong-thang-loi
 
 [nemtotgiare.com]
@@ -32,9 +32,9 @@ title = Bộ drap mền Thắng Lợi cotton cao cấp giá chỉ 700k
 url = https://nemtotgiare.com/san-pham/bo-drap-cotton-thang-loi-90.html
 
 [tiki.vn]
-match = -36.0%%
-title = Ga giường thăng lợi 160*200 hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=ga giường thăng lợi 160*200
+match = -64.0%%
+title = Bộ chăn ra gối nệm thắng lợi hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=bộ chăn ra gối nệm thắng lợi
 
 [nemhana.com]
 match = -40.0%%
