--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-07-30 13:49:32
+lastsearch = 2024-07-30 19:00:06
 
 [burningman.org]
 match = -60.0%%
@@ -24,7 +24,7 @@ url = https://www.hcso.org/justice-center-services/inmate-search/
 [desaulnier.house.gov]
 match = -180.0%%
 title = Congressman Mark Desaulnier | Representing the 10th ...
-url = http://desaulnier.house.gov/
+url = https://desaulnier.house.gov/
 
 [account.microsoft.com]
 match = -226.7%%
@@ -194,7 +194,7 @@ url = https://max.adobe.com/
 [www.uniqlo.com]
 match = -233.3%%
 title = Women's, Men's and Kids' Clothing & Accessories | UNIQLO US
-url = https://www.uniqlo.com/us/en/
+url = https://www.uniqlo.com/us/en/?srsltid=AfmBOorOHa-yT8nDaglwtqM4TeB38KeHf2Dx9KiAOCC0FYdvTAQIXHXe
 
 [facebookuserprivacysettlement.com]
 match = -100.0%%
