--- a/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-co-goi-14.html
 lastopen = 2024-06-09 22:25:57
 
 [search]
-lastsearch = 2024-07-30 17:59:29
+lastsearch = 2024-07-30 20:02:50
 
 [shopee.vn]
-match = 21.4%%
-title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
-url = https://shopee.vn/list/chiếu điều hòa
+match = -25.0%%
+title = Chiếu mây điều hòa lót lụa cao cấp có chun bo góc giúp cố ...
+url = https://shopee.vn/Chiếu-mây-điều-hòa-lót-lụa-cao-cấp-có-chun-bo-góc-giúp-cố-định-chiếu-Chiếu-điều-hoà-sợi-mây-viền-lụa-thoáng-khí-tốt-i.472596491.13662110393
 
 [chieutrelanlan.com]
 match = 19.0%%
@@ -175,4 +175,9 @@ url = https://www.congnghieptieudung.vn/su-that-ve-cong-dung-cua-chieu-dieu-hoa-
 match = -10.7%%
 title = Chiếu điều hoà là gì? Dùng chiếu điều hòa có tốt không?
 url = https://fptshop.com.vn/tin-tuc/dien-may/chieu-dieu-hoa-la-gi-161105
+
+[khonemtonghop.com]
+match = -17.9%%
+title = Chiếu Điều Hòa Là Gì? TOP 4 Chiếu Điều Hòa Hot Nhất ...
+url = https://khonemtonghop.com/chieu-dieu-hoa-la-gi/
 
