--- a/images/chieu-du-lichvt-22-3m/config.ini
+++ b/images/chieu-du-lichvt-22-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lichvt-22-3m.html
 lastopen = 2024-06-09 21:46:25
 
 [search]
-lastsearch = 2024-07-30 18:49:48
+lastsearch = 2024-07-30 20:14:19
 
 [vnexpress.net]
 match = -128.6%%
@@ -337,9 +337,9 @@ title = Công ty cổ phần Du lịch Cáp treo Vũng Tàu bị phạt 150 ...
 url = https://baodautu.vn/cong-ty-co-phan-du-lich-cap-treo-vung-tau-bi-phat-150-trieu-dong-vi-xay-dung-khong-phep-d219490.html
 
 [chieutour.com.vn]
-match = -57.1%%
-title = TOUR DU LỊCH AN GIANG ĐI VŨNG TÀU 2 NGÀY 1 ĐÊM
-url = https://chieutour.com.vn/chuong-trinh-tour/chum-tour-vung-tau/tour-an-giang-vung-tau-2-ngay-1-dem.html
+match = -71.4%%
+title = TOUR DU LỊCH BÌNH PHƯỚC ĐI VŨNG TÀU 2 NGÀY 1 ...
+url = https://chieutour.com.vn/chuong-trinh-tour/chum-tour-vung-tau/tour-du-lich-binh-phuoc-di-vung-tau-2-ngay-1-dem.html
 
 [tpvt.vungtau.baria-vungtau.gov.vn]
 match = -33.3%%
