--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-30 18:53:54
+lastsearch = 2024-07-30 19:57:58
 
 [tiki.vn]
 match = -47.6%%
@@ -22,9 +22,9 @@ title = Thông tin lãnh sự - Văn phòng Kinh tế và Văn hóa Đài Bắc 
 url = https://www.roc-taiwan.org/vn_vi/cat/47.html
 
 [www.tiktok.com]
-match = 0.0%%
-title = 
-url = https://www.tiktok.com/@duongdeofficial/video/7315000665816829186
+match = -19.0%%
+title = Cách Xem Lịch Chiếu Film Tại Taiwan
+url = https://www.tiktok.com/discover/cách-xem-lịch-chiếu-film-tại-taiwan?lang=en
 
 [www.tripadvisor.com.vn]
 match = -42.9%%
