--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-07-30 17:16:15
+lastsearch = 2024-07-30 20:09:50
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -12,9 +12,9 @@ title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
 url = https://thegioidemviet.vn/chieu-truc-que-lam/
 
 [chieutrelanlan.com]
-match = 32.3%%
-title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
-url = https://chieutrelanlan.com/chieu-truc-p17.html?size=16
+match = 29.0%%
+title = Chiếu trúc Quế Lâm không viền màu trắng 160x200cm
+url = https://chieutrelanlan.com/chieu-truc-que-lam-khong-vien-mau-trang-160x200cm-72.html
 
 [shopee.vn]
 match = 16.1%%
@@ -42,9 +42,9 @@ title = Chiếu trúc hạt Quế Lâm loại 1, chiếu điều hoà cao cấp
 url = https://www.lazada.vn/products/chieu-truc-hat-que-lam-loai-1-chieu-dieu-hoa-cao-cap-i1845950408.html
 
 [www.diepxuan.com]
-match = 100.0%%
-title = Chiếu trúc quế lâm loại 1 16 20
-url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
+match = 41.9%%
+title = Chiếu trúc Quế Lâm I 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-truc-que-lam-i-140x190.html
 
 [www.facebook.com]
 match = -31.6%%
