--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-07-30 15:42:17
+lastsearch = 2024-07-30 20:11:11
 
 [www.everonvn.vn]
 match = 20.0%%
@@ -17,9 +17,9 @@ title = Nệm Everon Ceramic
 url = https://everon.vip/nem-everon-ceramic
 
 [everonvn.com.vn]
-match = 20.0%%
-title = Bảng Giá Đệm Everon Năm 2024
-url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon
+match = -75.0%%
+title = Đệm Bông Ép Everon 1200x1900 Mua Cho Giường Đơn ...
+url = https://everonvn.com.vn/everon/1900/dem-bong-ep-everon-co-120x190?srsltid=AfmBOooceMjbH56hrnx22owLALl1wlfFVM2Inz6crkUbLGjh75PysR2m
 
 [everonchinhhang.vn]
 match = -50.0%%
@@ -44,7 +44,7 @@ url = https://everon365.vn/dem-bong-ep-everon-ha-noi.html
 [everon.com.vn]
 match = -80.0%%
 title = 120*200 | Showroom Chăn Ga Gối đệm EVERON
-url = https://everon.com.vn/kich-co/120200/
+url = https://everon.com.vn/kich-co/120200/?srsltid=AfmBOooVfBZr3EQu47N666OufpKI-5heun6hrs8WzU7YGAsjlvXOlT-o
 
 [demqueensweet.com]
 match = -65.0%%
@@ -54,12 +54,12 @@ url = https://demqueensweet.com/
 [www.lazada.vn]
 match = -125.0%%
 title = Nệm( Đệm) bông ép Everon gấp 3 tiện lợi dễ di chuyển ...
-url = https://www.lazada.vn/products/nem-dem-bong-ep-everon-gap-3-tien-loi-de-di-chuyen-thoang-mat-i901864094.html
+url = https://www.lazada.vn/products/nem-dem-bong-ep-everon-gap-3-tien-loi-de-di-chuyen-thoang-mat-i901864094.html?srsltid=AfmBOorAveA6V5w1K4Uu-o_2thyJ4WdXJubxW4GtmDjbEnIXcrkZHS7a
 
 [ru9.vn]
 match = -150.0%%
 title = Nệm lò xo 1m2 giá bao nhiêu? Bảng giá các thương hiệu tốt
-url = https://ru9.vn/blogs/magazine/nem-lo-xo-1m2-gia-bao-nhieu
+url = https://ru9.vn/blogs/magazine/nem-lo-xo-1m2-gia-bao-nhieu?srsltid=AfmBOormHwiJLLepuIn_vf4QbwnFsdlGYQ-sbbxfcDC47hf1ghvX1psX
 
 [www.diepxuan.com]
 match = 0.0%%
