--- a/images/nem-everon-140x200x9/config.ini
+++ b/images/nem-everon-140x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-140x200x9.html
 lastopen = 2024-06-06 17:10:12
 
 [search]
-lastsearch = 2024-07-30 17:50:36
+lastsearch = 2024-07-30 20:13:58
 
 [www.everonvn.vn]
 match = -120.0%%
@@ -78,8 +78,8 @@ url = https://everon.vip/nem?page=1&productdimensions=2033,347,2005,1999,1974,83
 
 [everonvietnam.com]
 match = -135.0%%
-title = cushion – mattress - | Everon - Korean Pillows & Blankets
-url = https://everonvietnam.com/en/dem-nem/
+title = cushion - mattress - | Everon - Korean Pillows & Blankets
+url = https://everonvietnam.com/en/dem-nem/page/3/
 
 [thegioidemdep.com]
 match = -125.0%%
