--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-07-30 18:23:58
+lastsearch = 2024-07-30 20:06:42
 
 [www.tui.co.uk]
-match = -40.0%%
-title = Flight and Travel Options
-url = https://www.tui.co.uk/destinations/info/travel-options
+match = -7.7%%
+title = Flight Status
+url = https://www.tui.co.uk/flight/arrivals-and-departures
 
 [www.travelgossip.co.uk]
 match = 0.0%%
