--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-07-30 17:41:34
+lastsearch = 2024-07-30 19:59:01
 
 [www.walmart.com]
 match = -162.5%%
@@ -12,9 +12,9 @@ title = Zury Natural Dream Multi Yaky 18" 20" 22", SOM RT BURG
 url = https://www.walmart.com/ip/Zury-Natural-Dream-Multi-Yaky-18-20-22-SOM-RT-BURG/652131534
 
 [www.tiktok.com]
-match = -243.8%%
-title = Lip liner: @Huda Beauty in muted pink Lipstick: @Charlotte ...
-url = https://www.tiktok.com/@faydeutsch/video/7278866493734178094
+match = -6.2%%
+title = Dvorak Genshin Bpc
+url = https://www.tiktok.com/discover/dvorak-genshin-bpc?lang=en
 
 [www.diepxuan.com]
 match = -162.5%%
@@ -54,7 +54,7 @@ url = https://www.youtube.com/watch?v=CUQBFAvIlUU
 [m.facebook.com]
 match = 0.0%%
 title = Thiên An Stationery
-url = https://m.facebook.com/profile.php?id=100065257461640&locale=ms_MY
+url = https://m.facebook.com/profile.php?id=100065257461640&locale=fr_FR
 
 [noveltoon.vn]
 match = -100.0%%
@@ -124,7 +124,7 @@ url = https://www.sephora.com/ca/en/product/huda-beauty-lip-contour-pencil-2-0-P
 [www.tui.co.uk]
 match = 0.0%%
 title = 
-url = https://www.tui.co.uk/holidays/tui-blue
+url = https://www.tui.co.uk/destinations/faq/before-you-go/booking-your-holiday
 
 [www.dailymail.co.uk]
 match = -218.8%%
